# edu-backend

./: Cargo.toml
.cargo/: config.toml
proto/: Cargo.toml  build.rs
proto/protos/: primitives.proto  university.proto
proto/src/: lib.rs
proto/src/endpoints/: mod.rs  university.rs
proto/src/protos/: mod.rs  primitives.rs  university.rs
server/: Cargo.toml
server/src/: main.rs
