[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
tonic = { version = "0.5.2", features = ["prost"] }
prost = "0.8.0"
edu-subxt = { git = "https://github.com/metallic-foundation/edu-subxt", branch = "main" }

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["prost"] }