[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tonic = { version = "0.9.0", features = ["prost"] }
prost = "0.11.8"
edu-subxt = { git = "https://github.com/metallic-foundation/edu-subxt", branch = "main" }
tonic-reflection = { version = "0.9.0" }

[build-dependencies]
tonic-build = { version = "0.9.0", features = ["prost"] }